<resources>
    <string name="app_name">百读</string>
    <string name="tool_bar_title_name">百读小说</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_order_add_book_text">默认排序</string>
    <string name="action_order_update_time_text">更新时间排序</string>
    <string name="action_order_chapter_count_text">章节总数排序</string>
    <string name="action_order_author_text">作者排序</string>
    <string name="action_search">Search</string>
    <string name="search_text">搜索</string>
    <string name="search_edit_text_hint">请输入书名</string>
    <string name="search_text_history">历史搜索</string>
    <string name="search_text_history_delete_text">清除</string>
    <string name="search_item_author_text">作者:</string>
    <string name="search_item_author_chapter_latest">最新章节:</string>
    <string name="search_item_author_update_time">最后更新:</string>
    <string name="search_item_author_source">来源:</string>
    <string name="search_book_detail_button_read_text">立即阅读</string>
    <string name="search_book_detail_button_bookcase_text">加入书架</string>
    <string name="search_book_detail_button_bookcase_add_text">已加入到书架</string>
    <string name="search_book_detail_button_cache_text">全本缓存</string>
	<string name="book_search_book_dont_find_text">Sorry,找不到这本书，本软件暂时只支持精确搜索，请确认输入的书名是否正确</string>
    <string name="network_connect_failed">网络连接不上，请检查网络</string>
    <string name="network_exception">网络异常，请检查网络</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="confirm_tips">在下明白了</string>
    <string name="double_click_cancel">再按一次退出应用</string>
    <string name="nav_clear_cache_text">清除本地缓存</string>
    <string name="nav_restore_config_text">恢复默认设置</string>
    <string name="nav_inflater_book">加载缓存书籍</string>
    <string name="nav_suggest_report_text">发送建议</string>
    <string name="nav_add_source_web_text">添加修改源网站</string>
    <string name="text_view_serialise_text">连</string>
    <string name="text_view_end_text">完</string>
    <string name="nav_rate_text">给个好评</string>
    <string name="nav_disclaimer_text">免责声明</string>

    <!--书架页面-->
    <string name="book_case_tool_bar_top">置顶</string>
    <string name="book_case_tool_bar_cache">缓存</string>
    <string name="book_case_tool_bar_delete">删除</string>
    <string name="book_case_dialog_list_top">@string/book_case_tool_bar_top</string>
    <string name="book_case_dialog_list_top_cancel">取消置顶</string>
    <string name="book_case_dialog_list_detail">书籍详情</string>
    <string name="book_case_dialog_list_cache">缓存全本</string>
    <string name="book_case_dialog_list_delete">删除本书</string>
    <string name="book_case_dialog_list_opera">批量操作</string>
    <string name="update_finish">更新完毕</string>
    <string name="update_finish_no_new">更新完毕,无新章节</string>
    <string name="no_cache">本地无缓存</string>
    <string name="cache_book_title">检测到本地有缓存书籍</string>
    <string name="cache_book_confirm">加载</string>
    <string name="cache_book_cancel">不加载</string>
    <string name="restore_config">恢复默认设置</string>
    <string name="delete_all_book">删除所有的数据缓存</string>
    <string name="top_book_tips">置顶选中书籍</string>
    <string name="cache_one_book_tips">缓存书籍，建议在WIFI下缓存</string>
    <string name="cache_book_tips">缓存选中书籍，建议在WIFI下缓存</string>
    <string name="delete_one_book_tips">删除书籍,缓存也将一起删除且不能恢复...</string>
    <string name="delete_book_tips">删除选中的书籍,缓存也将一起删除且不能恢复...</string>
	<string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_item_chapter_update_text">新</string>
    <string name="chapter_list_item_cache_text">缓</string>
    <string name="book_case_no_book_tips">先去添加一本小说吧</string>

    <!--搜索界面-->
    <string name="search_result_null">这位小哥，为了节省流量，目前只支持精确搜索，请确定你没有写错书名</string>

    <!--阅读界面-->
    <string name="book_read_setting_bottom_button_text_chapter">目录</string>
    <string name="book_read_setting_bottom_button_text_mark">书签</string>
    <string name="book_read_setting_bottom_button_text_size">字体</string>
    <string name="book_read_setting_bottom_button_text_more">更多</string>
    <string name="book_read_setting_top_panel_mark_add_text">添加书签</string>
    <string name="book_read_setting_top_panel_add_case_text">添加到书架</string>
    <string name="book_read_setting_top_panel_cache_book_text">缓存全本</string>
    <string name="book_read_preference_title_font">文字</string>
    <string name="book_read_preference_title_line">行间距</string>
    <string name="book_read_preference_title_margin">左右边距</string>
    <string name="book_read_setting_top_panel_source_text">换源</string>
    <string name="mark_clear">清空书签</string>
    <string name="mark_null">兄台，书签是空的~~</string>
    <string name="mark_delete">删除书签</string>
    <string name="last_chapter">已到最后一章</string>
    <string name="first_chapter">已到第一章</string>
    <string name="mark_success">书签添加成功</string>
    <string name="case_add_success">成功添加到书架</string>
    <string name="case_add_failed">添加失败</string>
    <string name="case_add_tips">请先添加本书到书架</string>
    <string name="cache_book">已添加到缓存队列</string>
    <string name="order_default">正序</string>
    <string name="order_revert">逆序</string>
    <string name="chapter_load_error">章节加载错误</string>
    <string name="disclaimer">"百读小说提醒您：在使用百读小说前，请您务必仔细阅读并透彻理解本声明。您可以选择不使用百读小说，但如果您使用百读小说，您的使用行为将被视为对本声明全部内容的认可。
 　　百读小说是一款提供网络小说即时更新的工具，为广大小说爱好者提供一种方便、快捷、舒适的试读体验。百读小说致力于最大程度的减少网络小说阅读者在自行搜寻过程中毫无意义的时间浪费，通过专业搜索展示不同网站中网络小说的最新章节。 百读小说为广大小说爱好者提供方便、快捷、舒适的试读体验的同时，也使优秀网络小说得以更迅捷、更广泛的传播，从而达到了在一定程度促进网络文学充分繁荣发展之目的。
　　当您点击搜索一本书时，百读小说会将该书的书名以关键词的形式提交到第三方网站或搜索引擎（如百度、宜搜、贴吧等）。第三方网站返回的内容与百读小说无关，百读小说对其概不负责，亦不承担任何法律责任。 任何通过使用百读小说而链接到的第三方网页均系他人制作或提供，您可能从该第三方网页上获得其他服务，百读小说对其合法性概不负责，亦不承担任何法律责任。第三方搜索引擎结果根据你提交的书名自动搜索获得并提供试读，不代表百读小说赞成被搜索链接到的第三方网页上的内容或立场。 您应该对使用搜索引擎的结果自行承担风险。百读小说不做任何形式的保证：不保证第三方搜索引擎的搜索结果满足您的要求，不保证搜索服务不中断，不保证搜索结果的安全性、正确性、及时性、合法性。因网络状况、通讯线路、第三方网站等任何原因而导致您不能正常使用百读小说，百读小说不承担任何法律责任。
　　百读小说鼓励广大小说爱好者通过百读小说发现优秀网络小说及其提供商，并建议阅读正版图书。任何单位或个人认为通过百读小说搜索链接到的第三方网页内容可能涉嫌侵犯其信息网络传播权，应该及时向百读小说提出书面权利通知，并提供身份证明、权属证明及详细侵权情况证明。百读小说在收到上述法律文件后，将会依法尽快断开相关链接内容。"</string>
</resources>
