<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_order_add_book"
        android:orderInCategory="100"
        android:title="@string/action_order_add_book_text"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_order_update_time"
        android:orderInCategory="100"
        android:title="@string/action_order_update_time_text"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_order_chapter_count"
        android:orderInCategory="100"
        android:title="@string/action_order_chapter_count_text"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_order_author"
        android:orderInCategory="100"
        android:title="@string/action_order_author_text"
        app:showAsAction="collapseActionView" />

</menu>
