<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/search_fragment_list_item_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/default_book_detail_cover_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/search_fragment_list_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/search_list_item_name_text_size" />


        <TextView
            android:id="@+id/search_fragment_list_item_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_item_author_text" />

        <TextView
            android:id="@+id/search_fragment_list_item_chapter_latest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_item_author_chapter_latest"
            android:textSize="@dimen/search_fragment_list_item_chapter_text_size" />

        <TextView
            android:id="@+id/search_fragment_list_item_chapter_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_item_author_update_time" />

        <TextView
            android:id="@+id/search_fragment_list_item_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_item_author_source"
            android:textColor="@color/colorGray"
            android:visibility="gone" />
    </LinearLayout>


</LinearLayout>