<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">


    <LinearLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_tool_bar_height"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/search_fragment_button_back"
            android:layout_width="@dimen/default_image_button_width"
            android:layout_height="match_parent"
            android:background="@color/colorTransparent"
            android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha" />

        <EditText
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGray"
            android:id="@+id/search_fragment_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/search_edit_text_hint" />

        <Button
            android:textColor="@color/colorWhite"
            android:id="@+id/search_fragment_button_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorTransparent"
            android:text="@string/search_text" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/default_padding_left"
            android:text="@string/search_text_history"
            android:id="@+id/search_fragment_text_history"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_image_button_height" />

        <include layout="@layout/search_book_detail"
            android:id="@+id/search_fragment_top_book_detail"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"/>

    </FrameLayout>

    <ListView
        android:layout_marginLeft="@dimen/default_padding_left"
        android:id="@+id/search_fragment_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>